--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,3 +42,74 @@ body {
   background-color: var(--color-button);
   font-family: var(--font-secondary);
 }
+/* about */
+.about-title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: capitalize;
+}
+.about-text {
+  font-size: 32px;
+  line-height: 1.18;
+  background-color: var(--color-bg-section);
+}
+.about-link {
+  letter-spacing: 0.06em;
+  line-height: 1.5;
+  background-color: var(--color-button);
+}
+
+.advantages-title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: capitalize;
+  font-family: var(--font-secondary);
+}
+.advantages-text {
+  font-size: 32px;
+  line-height: 1.18;
+}
+.services {
+  background-color: var(--color-bg-section);
+}
+.services-title {
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+}
+.services-text {
+  font-size: 32px;
+  line-height: 1.18;
+  text-align: center;
+}
+.services-name {
+  line-height: 1.16;
+}
+.buttonon {
+  font-family: var(--font-secondary);
+  letter-spacing: 0.06;
+  border: 3px solid #b2ffa6;
+  border-radius: 5px;
+  padding: 15px 80px;
+  cursor: pointer;
+  font-size: 24px;
+  background-color: var(--color-bg-section);
+}
+.footer {
+  background-color: var(--color-bg-primary);
+}
+.footer-logo {
+  color: var(--color-text-contrast);
+  font-weight: 300;
+  font-size: 40px;
+  text-transform: capitalize;
+  text-decoration-line: none;
+}
+.footer-logo-part {
+  font-weight: 700;
+}
+.footer-police {
+  line-height: 1.16;
+  color: var(--color-text-contrast);
+  text-transform: capitalize;
+}
