--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,6 +15,13 @@ body {
   font-weight: 400;
   line-height: 1.17;
 }
+.conteiner {
+  max-width: 1650px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .header {
   background-color: var(--color-bg-primary);
 }
