--- a/src/css/main.css
+++ b/src/css/main.css
@@ -15,7 +15,7 @@ body {
   font-weight: 400;
   line-height: 1.17;
 }
-.conteiner {
+.container {
   max-width: 1650px;
   padding-right: 15px;
   padding-left: 15px;
@@ -24,6 +24,15 @@ body {
 }
 .header {
   background-color: var(--color-bg-primary);
+}
+.nav-list {
+  display: flex;
+  gap: 100px;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 150px;
 }
 .nav-link {
   color: var(--color-text-contrast);
@@ -34,10 +43,19 @@ body {
   color: var(--color-button);
 }
 /* hero */
+.hero-container {
+  display: flex;
+  gap: 342px;
+}
+.hero-content {
+  padding: 150px 0px 365px;
+}
 .hero-title {
   font-size: 64px;
   font-weight: 400;
   text-transform: capitalize;
+  line-height: 85px;
+  margin-bottom: 50px;
 }
 .hero-title-part {
   font-weight: 700;
@@ -48,6 +66,8 @@ body {
   letter-spacing: 0.06em;
   background-color: var(--color-button);
   font-family: var(--font-secondary);
+  padding: 15px 80px;
+  border-radius: 5px;
 }
 /* about */
 .about-title {
